real-world-k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: real-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: 092682177706.dkr.ecr.ap-south-1.amazonaws.com/order-service:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: real-world
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 3003
      targetPort: 3003
