real-world-k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: real-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: 092682177706.dkr.ecr.ap-south-1.amazonaws.com/payment-service:latest
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: real-world
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - port: 3004
      targetPort: 3004
