real-world-k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: real-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: 092682177706.dkr.ecr.ap-south-1.amazonaws.com/product-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: real-world
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 3002
      targetPort: 3002
