real-world-k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: real-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 092682177706.dkr.ecr.ap-south-1.amazonaws.com/user-service:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: real-world
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
