real-world-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: real-world-ingress
  namespace: real-world
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: realworld.sneha.com   # replace with your domain / ALB DNS
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3001
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 3002
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3003
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 3004
